--- a/netlify.toml
+++ b/netlify.toml
@@ -1,34 +1,18 @@
 [build]
-  # Build command
   command = "npm run build"
-  
-  # Publish directory (where your built files are)
   publish = "dist"
-  
-  # Node.js version
-  environment = { NODE_VERSION = "18" }
 
 [build.environment]
-  # Increase Node.js memory limit for larger builds
+  NODE_VERSION = "18"
   NODE_OPTIONS = "--max-old-space-size=4096"
 
-# Environment variables for production
-# Add these in your Netlify dashboard under Site settings > Environment variables
-# VITE_FIREBASE_API_KEY = "your_api_key_here"
-# VITE_FIREBASE_AUTH_DOMAIN = "your_auth_domain_here"
-# VITE_FIREBASE_PROJECT_ID = "your_project_id_here"
-# VITE_FIREBASE_STORAGE_BUCKET = "your_storage_bucket_here"
-# VITE_FIREBASE_MESSAGING_SENDER_ID = "your_sender_id_here"
-# VITE_FIREBASE_APP_ID = "your_app_id_here"
-# VITE_FIREBASE_MEASUREMENT_ID = "your_measurement_id_here"
-
-# Redirect rules for SPA (Single Page Application)
+# SPA redirect rule
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
 
-# Headers for security and performance
+# Security headers
 [[headers]]
   for = "/*"
   [headers.values]
@@ -37,8 +21,9 @@
     X-XSS-Protection = "1; mode=block"
     Referrer-Policy = "strict-origin-when-cross-origin"
 
+# Cache static assets
 [[headers]]
-  for = "/static/*"
+  for = "/assets/*"
   [headers.values]
     Cache-Control = "public, max-age=31536000, immutable"
 
