fixing payment and products page

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,6 +19,10 @@
   "editor.quickSuggestions": {
     "strings": true
   },
+  "typescript.preferences.includePackageJsonAutoImports": "off",
+  "files.exclude": {
+    "**/functions/src/**": true
+  },
   "css.customData": [
     ".vscode/tailwind.json"
   ]
