--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "dev:netlify": "netlify dev",
     "build": "vite build",
     "build:dev": "vite build --mode development",
+    "build:analyze": "vite build --mode production && npx vite-bundle-analyzer dist",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "preload-routes": "node scripts/preload-routes.js"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
