--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "netlify-cli": "^23.1.3",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
+    "terser": "^5.36.0",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.38.0",
     "vite": "^5.4.19"
