--- a/netlify.toml
+++ b/netlify.toml
@@ -2,6 +2,12 @@
   command = "npm run build"
   publish = "dist"
 
+[dev]
+  command = "npm run dev"
+  targetPort = 8081
+  port = 8888
+  autoLaunch = false
+
 [functions]
   directory = "netlify/functions"
 
