--- a/package.json
+++ b/package.json
@@ -93,10 +93,12 @@
     "lovable-tagger": "^1.1.8",
     "netlify-cli": "^23.1.3",
     "postcss": "^8.5.6",
+    "rollup-plugin-visualizer": "^6.0.3",
     "tailwindcss": "^3.4.17",
     "terser": "^5.36.0",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.38.0",
-    "vite": "^5.4.19"
+    "vite": "^5.4.19",
+    "vite-plugin-compression": "^0.5.1"
   }
 }
