--- a/package.json
+++ b/package.json
@@ -57,11 +57,15 @@
     "firebase-functions": "^6.4.0",
     "html2canvas": "^1.4.1",
     "input-otp": "^1.4.2",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
+    "pdfmake": "^0.2.20",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
+    "react-firebase-hooks": "^5.1.1",
     "react-hook-form": "^7.61.1",
     "react-icons": "^5.5.0",
     "react-resizable-panels": "^2.1.9",
@@ -81,6 +85,7 @@
     "@types/d3": "^7.4.3",
     "@types/d3-color": "^3.1.3",
     "@types/d3-path": "^3.1.1",
+    "@types/jspdf": "^1.3.3",
     "@types/node": "^22.17.1",
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
