--- a/netlify/functions/tsconfig.json
+++ b/netlify/functions/tsconfig.json
@@ -6,16 +6,17 @@
     "moduleResolution": "node",
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "strict": true,
+    "strict": false,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
-    "isolatedModules": true,
+    "allowJs": true,
+    "checkJs": false,
     "noEmit": true,
     "types": ["node"]
   },
   "include": [
-    "**/*.ts"
+    "**/*.js"
   ],
   "exclude": [
     "node_modules"
