--- a/netlify.toml
+++ b/netlify.toml
@@ -21,7 +21,43 @@
   to = "/.netlify/functions/:splat"
   status = 200
 
-# SPA redirect rule
+# Don't rewrite actual asset requests
+[[redirects]]
+  from = "/assets/*"
+  to = "/assets/:splat"
+  status = 200
+
+[[redirects]]
+  from = "/*.js"
+  to = "/:splat"
+  status = 200
+
+[[redirects]]
+  from = "/*.css"
+  to = "/:splat"
+  status = 200
+
+[[redirects]]
+  from = "/*.woff2"
+  to = "/:splat"
+  status = 200
+
+[[redirects]]
+  from = "/*.png"
+  to = "/:splat"
+  status = 200
+
+[[redirects]]
+  from = "/*.jpg"
+  to = "/:splat"
+  status = 200
+
+[[redirects]]
+  from = "/*.ico"
+  to = "/:splat"
+  status = 200
+
+# SPA redirect rule (must be last)
 [[redirects]]
   from = "/*"
   to = "/index.html"
