--- a/netlify.toml
+++ b/netlify.toml
@@ -15,55 +15,7 @@
   NODE_VERSION = "18"
   NODE_OPTIONS = "--max-old-space-size=4096"
 
-# API redirect rule
-[[redirects]]
-  from = "/api/*"
-  to = "/.netlify/functions/:splat"
-  status = 200
-
-# Don't rewrite actual asset requests
-[[redirects]]
-  from = "/assets/*"
-  to = "/assets/:splat"
-  status = 200
-
-[[redirects]]
-  from = "/*.js"
-  to = "/:splat"
-  status = 200
-
-[[redirects]]
-  from = "/*.css"
-  to = "/:splat"
-  status = 200
-
-[[redirects]]
-  from = "/*.woff2"
-  to = "/:splat"
-  status = 200
-
-[[redirects]]
-  from = "/*.png"
-  to = "/:splat"
-  status = 200
-
-[[redirects]]
-  from = "/*.jpg"
-  to = "/:splat"
-  status = 200
-
-[[redirects]]
-  from = "/*.ico"
-  to = "/:splat"
-  status = 200
-
-# SPA redirect rule (must be last)
-[[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 200
-
-# Security headers
+# Security headers (applies to all responses)
 [[headers]]
   for = "/*"
   [headers.values]
@@ -71,32 +23,49 @@
     X-Content-Type-Options = "nosniff"
     X-XSS-Protection = "1; mode=block"
     Referrer-Policy = "strict-origin-when-cross-origin"
+    Permissions-Policy = "camera=(), microphone=(), geolocation=()"
 
-# Cache static assets
+# Force proper MIME types and long caching for built assets
 [[headers]]
-  for = "/assets/*"
+  for = "/assets/*.js"
   [headers.values]
-    Cache-Control = "public, max-age=31536000, immutable"
-
-[[headers]]
-  for = "*.js"
-  [headers.values]
-    Cache-Control = "public, max-age=31536000, immutable"
     Content-Type = "application/javascript; charset=utf-8"
+    Cache-Control = "public, max-age=31536000, immutable"
 
 [[headers]]
-  for = "*.mjs"
+  for = "/assets/*.mjs"
   [headers.values]
-    Cache-Control = "public, max-age=31536000, immutable"
     Content-Type = "application/javascript; charset=utf-8"
+    Cache-Control = "public, max-age=31536000, immutable"
 
 [[headers]]
-  for = "*.css"
+  for = "/assets/*.css"
   [headers.values]
-    Cache-Control = "public, max-age=31536000, immutable"
     Content-Type = "text/css; charset=utf-8"
+    Cache-Control = "public, max-age=31536000, immutable"
 
 [[headers]]
-  for = "*.woff2"
+  for = "/assets/*.wasm"
   [headers.values]
+    Content-Type = "application/wasm"
     Cache-Control = "public, max-age=31536000, immutable"
+
+# API redirect rule (keep before SPA fallback)
+[[redirects]]
+  from = "/api/*"
+  to = "/.netlify/functions/:splat"
+  status = 200
+
+# Redirect apex (plintcart.io) to www primary domain
+[[redirects]]
+  from = "/*"
+  to = "https://www.plintcart.io/:splat"
+  status = 301
+  force = true
+  conditions = { Host = ["plintcart.io"] }
+
+# SPA fallback - must be last to serve index.html for client-side routing
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
