--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "@emotion/styled": "^11.14.1",
     "@hookform/resolvers": "^3.10.0",
     "@mui/material": "^7.3.1",
+    "@mysten/dapp-kit": "^0.17.7",
+    "@mysten/enoki": "^0.11.10",
+    "@mysten/sui": "^1.37.6",
     "@netlify/functions": "^4.2.1",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
@@ -47,7 +50,7 @@
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@supabase/supabase-js": "^2.53.0",
-    "@tanstack/react-query": "^5.83.0",
+    "@tanstack/react-query": "^5.87.1",
     "@types/html2canvas": "^1.0.0",
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
@@ -56,8 +59,6 @@
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
     "firebase": "^12.0.0",
-    "firebase-admin": "^13.4.0",
-    "firebase-functions": "^6.4.0",
     "html2canvas": "^1.4.1",
     "input-otp": "^1.4.2",
     "jspdf": "^3.0.1",
@@ -68,7 +69,6 @@
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
-    "react-firebase-hooks": "^5.1.1",
     "react-hook-form": "^7.61.1",
     "react-icons": "^5.5.0",
     "react-resizable-panels": "^2.1.9",
