--- a/netlify.toml
+++ b/netlify.toml
@@ -24,12 +24,22 @@
     X-XSS-Protection = "1; mode=block"
     Referrer-Policy = "strict-origin-when-cross-origin"
     Permissions-Policy = "camera=(), microphone=(), geolocation=()"
+    Cross-Origin-Opener-Policy = "same-origin-allow-popups"
+    Cross-Origin-Embedder-Policy = "credentialless"
 
-# Specific headers for auth callback to allow popup communication
+# Specific headers for auth and popup handling
 [[headers]]
-  for = "/auth/callback"
+  for = "/auth/*"
   [headers.values]
     X-Frame-Options = "SAMEORIGIN"
+    Cross-Origin-Opener-Policy = "same-origin-allow-popups"
+
+# Headers for Google Auth popup/callback
+[[headers]]
+  for = "/__/auth/*"
+  [headers.values]
+    X-Frame-Options = "SAMEORIGIN"
+    Cross-Origin-Opener-Policy = "same-origin-allow-popups"
 
 # Force proper MIME types and long caching for built assets
 [[headers]]
@@ -43,6 +53,17 @@
   [headers.values]
     Content-Type = "application/javascript; charset=utf-8"
     Cache-Control = "public, max-age=31536000, immutable"
+
+# Fallback for any JS files not caught by above rules
+[[headers]]
+  for = "*.js"
+  [headers.values]
+    Content-Type = "application/javascript; charset=utf-8"
+
+[[headers]]
+  for = "*.mjs"  
+  [headers.values]
+    Content-Type = "application/javascript; charset=utf-8"
 
 [[headers]]
   for = "/assets/*.css"
