--- a/package.json
+++ b/package.json
@@ -5,16 +5,9 @@
   "type": "module",
   "scripts": {
     "dev": "vite --host --port 8080",
-    "dev:netlify": "netlify dev",
     "build": "vite build --mode production",
-    "build:fast": "vite build --mode production --minify esbuild --reportCompressedSize false",
-    "build:dev": "vite build --mode development",
-    "build:analyze": "vite build --mode production && npx vite-bundle-analyzer dist",
     "lint": "eslint .",
-    "preview": "vite preview --port 4173",
-    "preview:gzip": "vite preview --port 4173 --host",
-    "preload-routes": "node scripts/preload-routes.js",
-    "performance:analyze": "node performance-optimizer.mjs"
+    "preview": "vite preview --port 4173"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
